# ReadmeStuff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: regenerate-svgs.yml
aggregator/: Cargo.toml  errors.rs  mod.rs  models.rs  profile.rs  widgets.rs
api/: Cargo.toml  codeforce.rs  codewars.rs  github_client.rs  github_commit_streak.rs  github_langs.rs  github_statistic.rs  github_streak.rs  github_visitors.rs  leetcode.rs  lib.rs
api/github_visitors/: analytics.rs  engagement.rs  fetcher.rs  filter.rs  mod.rs  models.rs  storage.rs
cache/: Cargo.toml
cache/src/: lib.rs
catalog/: Cargo.toml
catalog/src/: lib.rs  pipeline.rs  registry.rs
cli/: Cargo.toml
cli/src/: main.rs
config/: Cargo.toml
config/src/: credential.rs  defaults.rs  io.rs  lib.rs  schema.rs
data/github_visitors/: traffic_snapshots.jsonl
draw/: Cargo.toml
draw/src/: cf_rating.rs  cf_stats.rs  competitive.rs  compose.rs  cw_kata.rs  cw_languages.rs  cw_rank.rs  github_contributions.rs  github_heatmap.rs  github_monthly.rs  github_repos.rs  github_social.rs  github_stats.rs  github_visitors.rs  helpers.rs  langs.rs  lc_badges.rs  lc_languages.rs  lc_skills.rs  lc_solved.rs  lib.rs  matrix.rs  streak.rs  text_card.rs  text_glyph.rs  text_input.rs  theme.rs
draw/tests/: text_demo_scratch.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs
text/: text.txt
tui/: Cargo.toml
tui/src/: app.rs  main.rs
tui/src/ui/: building.rs  done.rs  mod.rs  questionnaire.rs  report.rs  theme.rs  welcome.rs
