[package]
name = "leetcode-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "api/lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
httpmock = { version = "0.7", default-features = false }

