[package]
name = "readme-stuff-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "api/lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
httpmock = { version = "0.7", default-features = false }

