[package]
name = "readme-stuff-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
httpmock = { version = "0.7", default-features = false }

