[package]
name = "readme-stuff-catalog"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
readme-stuff-config = { path = "../config" }
readme-stuff-aggregator = { path = "../aggregator" }
readme-stuff-draw = { path = "../draw" }
tokio = { version = "1", features = ["full"] }
