[package]
name = "readme-stuff-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "readmestuff"
path = "src/main.rs"

[dependencies]
readme-stuff-draw       = { path = "../draw" }
readme-stuff-config     = { path = "../config" }
readme-stuff-catalog    = { path = "../catalog" }
tokio = { version = "1", features = ["full"] }
