[package]
name = "readme-stuff-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "readmestuff-tui"
path = "src/main.rs"

[dependencies]
readme-stuff-config = { path = "../config" }
readme-stuff-catalog = { path = "../catalog" }
ratatui = "0.29.0"
crossterm = "0.28"
tui-textarea = "0.7.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }
